# analysis_pt_radios

./: README.rst  pyproject.toml
radio_repeat/: analysis.py  clean_data.py  scrape_cidadefm.py  scrape_comercial.py  scrape_megafm.py  scrape_rfm.py
radio_repeat/data/: all_data.csv  cidadefm_10_08_2020.csv  cidadefm_11_08_2020.csv  cidadefm_12_08_2020.csv  cidadefm_13_08_2020.csv  cidadefm_14_08_2020.csv  cidadefm_15_08_2020.csv  cidadefm_16_08_2020.csv  comercial_10_08_2020.csv  comercial_11_08_2020.csv  comercial_12_08_2020.csv  comercial_13_08_2020.csv  comercial_14_08_2020.csv  comercial_15_08_2020.csv  comercial_16_08_2020.csv  megafm_10_08_2020.csv  megafm_11_08_2020.csv  megafm_12_08_2020.csv  megafm_13_08_2020.csv  megafm_14_08_2020.csv  megafm_15_08_2020.csv  megafm_16_08_2020.csv  rfm_10_08_2020.csv  rfm_11_08_2020.csv  rfm_12_08_2020.csv  rfm_13_08_2020.csv  rfm_14_08_2020.csv  rfm_15_08_2020.csv  rfm_16_08_2020.csv
tests/: test_radio_repeat.py
