[tool.poetry]
name = "radio_repeat"
version = "0.1.0"
description = ""
authors = ["Rui Silva"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19"
pandas = "^1.1"
matplotlib = "^3.3"
requests = "^2.24"
bs4 = "^0.0.1"
selenium = "^3.141"
unidecode = "^1.1"
yapf = "^0.30.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
